# project-zeno

./: .dockerignore  .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  _api.py  api.py  api_v2.py  app.py  client.py  docker-compose.dev.yaml  docker-compose.yaml  inspect_gfw_pbf_tiles.py  main.py  pyproject.toml  pytest.ini  server.py  test_api.py  zeno.config.yaml
.github/workflows/: agent-tests.yml  api-tests.yml  calver-bump.yml  docker-build-db.yml  docker-build-feature-branch.yml  docker-build.yml  evals.yaml  ingest-blog-data.yml  lint.yml  production-lag-report.yaml  push.yml  tools-tests.yml  unit-tests-tools.yml  unit-tests.yml  version-bump.yml  wri-insights-data.yml
.ollama/: Dockerfile  run-ollama.sh
api/: main.py  requirements.txt
api/rag/: agent.py
app/: basic.py
db/: Dockerfile  alembic.ini  entrypoint.sh  init-multiple-dbs.sh  migrate.sh  models.py
db/alembic/: README  env.py
docs/: ADR-001-aoi-selection-overhaul.md  ADR-001-standalone-insights.md  ADR-002-fao-fra-tool.md  AGENT_ARCHITECTURE.md  CLAUDE.md  CLI.md  DEPLOYMENT_PHASES.md  EVALS.md  README.md  adr-canopy-cover-threshold-resolution.md  dashboards-frontend-handoff.md  dashboards-map-widgets-handoff.md  dashboards-mvp-plan.md  filesystem-search.md  insight-chart-colors-plan.md  ollama-experiment-summary.md  view-context-pages.md
evals/: README.md  core.py  tool_evaluators.py
evals/data_handlers/: csv_loader.py  result_exporter.py
evals/e2e/: core.py
evals/evaluators/: __init__.py  answer_evaluator.py  aoi_evaluator.py  data_pull_evaluator.py  dataset_evaluator.py  llm_judges.py  utils.py
evals/langfuse_helpers/: __init__.py  dataset_integration.py  scoring.py
evals/runners/: __init__.py  api.py  base.py  local.py
evals/utils/: config.py  eval_types.py  models.py
experiments/: README.md  S2 T1-02 TCL(TCL dataset ID).csv  Zeno test dataset(S2 GADM 0-1).csv  Zeno test dataset(S2 GADM 2).csv  Zeno test dataset(S2 GADM 3).csv  Zeno test dataset(S2 GADM 4).csv  Zeno test dataset(S2 T1 Dataset ID).csv  Zeno test dataset(S5 T2-01 Investigator).csv  Zeno test dataset(S5 T2-02 Investigator).csv  e2e_test_dataset.csv  eval_data_interpretation.py  eval_dataset_identification.py  eval_gadm.py  eval_investi_gator.py  eval_utils.py  gadm_utils.py  run_evals.sh  test_alerts.sh  test_all.sh  test_dataset_finder.sh  test_kba.sh  test_new_agent.sh  unittest_gadm_equality.py  upload_dataset.py
frontend/: Dockerfile  app.py  capp.py  index.html  main.py  requirements.txt  utils.py  zeno.py
frontend/pages/: 1_distalert.py  1_🐥_Docu_Dodo.py  1_🦎_Uni_Guana.py  2_🦉_Owl_Gorithm.py  2_🧵_Threads.py  3_🦅_Earthy_Eagle.py  3_🧪_Evaluation.py  4_🐨_Keeper_Kaola.py  4_🐨_Keeper_Koala.py  4_📊_Labs_Monitoring.py  5_🐊_Investi_Gator.py  6_🧵_Threads.py
langfuse/: .env.example  README.md  docker-compose.yml
nbs/: 01_location-tool.ipynb  02_glad-agent.ipynb  03_wri-datasets.ipynb  04_rag-datasets.ipynb  05_router-agent.ipynb  06_rag-agent.ipynb  07_gee_zonal_stats.ipynb  08_context_layer_rag.ipynb  08_location-hitl.ipynb  09_data_api_otf_analysis_examples.ipynb  10_gee_tiles.ipynb  11_test_kba_insights.ipynb  12_kba_data_preparation.ipynb  13_cog_sights.ipynb  13_zeno_evaluation.ipynb  15_rag.ipynb  create_chroma_layers.py  gemini-codeact.ipynb  kba-agent.ipynb
rag/: app.py
research/: .env.ontario.example  001_ontario_schema.sql  ARCHITECTURE_OVERVIEW.md  INDEX.md  ONTARIO_PROJECT_SUMMARY.md  README.md  ingest_ontario_parks.py  ontario-implementation-checklist.md  ontario-zeno-workplan.md  ontario_area_lookup_tool.py
scripts/: README.md  create_gadm_plus.sql  dump_basemaps_tables.py  export_optimized_parquets.py  fetch_lcl_insights.py  fetch_wri_insights.py  generate_test_data.py  ingest_basemaps_to_duckdb.py  run_generate_insights_tests.sh  wri_insights_snapshot.py
services/geocoding-service/: Dockerfile  app.py  requirements.txt
src/: cli.py
src/agent/: __init__.py  agent_config.py  cli.py  config.py  graph.py  i18n.py  language.py  llms.py  middleware.py  models.py  prompts.py  skills.py  state.py  tool_profiles.py  tool_spec.py  view_pages.py
src/agents/: __init__.py  agents.py
src/api/: app.py  cli.py  config.py  data_models.py  dependencies.py  models.py  schemas.py  streaming.py
src/frontend/: Dockerfile  app.py  utils.py
src/graph/: __init__.py  state.py
src/ingest/: Dockerfile  embed_datasets.py  ingest_gadm.py  ingest_kba.py  ingest_landmark.py  ingest_wdpa.py  process_commodities.py  utils.py
src/rag/: README.md
src/shared/: __init__.py  config.py  database.py  geocoding_helpers.py  logging_config.py  request_context.py  tile_urls.py  version.py
src/tools/: __init__.py  analytics_datasets.yml  aoi.py  context_layer.py  create_chart.py  datasearch.py  dataset_finder.py  dist_alerts.py  generate_insights.py  get_capabilities.py  gfw_query.py  kba_data.py  kba_insights.py  kba_timeseries.py  layer_finder.py  location.py  pick_aoi.py  pick_dataset.py  plan_insights.py  pull_data.py  stac.py  visualize_data.py
src/user_profile_configs/: __init__.py  countries.py  gis_expertise.py  languages.py  sectors.py  topics.py
src/utils/: config.py  database.py  env_loader.py  geocoding_helpers.py  helpers.py  llms.py  logging_config.py
stac/: Dockerfile  README.md  delete_all_stac_data.py  docker-compose.yml  entrypoint.sh  generate_global_overview.py  generate_tile_urls.py  ingest_all.sh  natural_lands.py  requirements.txt  zonal_stats_dist.py  zonalstats_summary_tool.py
stac/datasets/: dist_alerts.py  global_land_cover.py  grasslands.py  natural_lands.py  tree_cover_loss.py  utils.py
stac/global_cog_creation/: merge_global_land_cover.sh  merge_natural_lands.sh
tests/: conftest.py  generate_test_data.py  test_api.py  test_context_layer_tool.py  test_dist_agent.py  test_dist_alerts.py  test_layerfinder_graph.py  test_location_agent.py  test_location_matcher.py  test_location_tool.py  test_pull_data.py  test_query_prep.py  test_stac_tool.py  utils.py
zeno/: Dockerfile  main.py  requirements.txt
(+629 files in other folders)
