[project]
name = "project-zeno"
version = "0.1.0"
description = "Language Interface for Maps & WRI/LCL data APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.7",
    "langchain-anthropic>=0.3.11",
    "langchain-community>=0.3.5",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.6",
    "langchain-community>=0.3.11",
    "streamlit>=1.40.0",
    "langfuse>=2.53.9",
    "langchain-chroma>=0.1.4",
    "thefuzz>=0.22.1",
    "fastapi[standard]>=0.115.4",
    "watchdog>=5.0.3",
    "uvicorn[standard]>=0.32.0",
    "streamlit-folium>=0.23.2",
    "earthengine-api>=1.4.0",
    "geojson-pydantic>=1.1.2",
    "fiona>=1.10.1",
    "geopandas>=1.0.1",
    "geemap>=0.35.1",
    "langgraph>=0.2.56",
    "pystac>=1.11.0",
    "pystac-client>=0.8.5",
    "elevenlabs>=1.50.5",
    "folium-vectorgrid>=0.1.3",
    "cachetools>=5.5.2",
    "pydantic>=2",
    "alembic>=1.15.2",
    "sqlalchemy>=2.0.35",
    "pypgstac>=0.9.6",
    "psycopg>=3.2.9",
    "rio-stac>=0.11.0",
    "psycopg-pool>=3.2.6",
    "langgraph-checkpoint-postgres>=2.0.21",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.0",
    "pre-commit>=4.0.1",
    "ruff>=0.7.3",
    "pytest>=8.3.3",
    "matplotlib>=3.9.2",
    "geopandas>=1.0.1",
    "lancedb>=0.17.0",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zeno"]
