[project]
name = "project-zeno"
version = "2026.6.17.2"
description = "Language Interface for Maps & WRI/LCL data APIs."
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    "langchain==1.2.13",
    "langchain-community==0.4.1",
    "langchain-core==1.2.22",
    "langchain-openai==1.1.12",
    "langfuse==3.10.1",
    "langchain-chroma==1.1.0",
    "langchain-google-genai==4.2.1",
    "fastapi[standard]==0.136.1",
    "watchdog==6.0.0",
    "uvicorn[standard]==0.35.0",
    "geojson-pydantic==2.0.0",
    "fiona==1.10.1",
    "geopandas==1.0.1",
    "langgraph==1.1.3",
    # Pin: prebuilt 1.0.10 imports ServerInfo, removed from langgraph 1.1.3's
    # runtime (the dep is unbounded, so a re-lock can otherwise break imports).
    "langgraph-prebuilt==1.0.8",
    "pystac==1.13.0",
    "pystac-client==0.9.0",
    "cachetools==5.5.2",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "alembic==1.16.4",
    "sqlalchemy==2.0.41",
    "pypgstac==0.9.7",
    "psycopg==3.2.9",
    "rio-stac==0.12.0",
    "psycopg-pool==3.2.6",
    "langgraph-checkpoint-postgres==3.0.5",
    "langchain-anthropic==1.4.0",
    "s3fs==2025.3.0",
    "pandas==2.2.3",
    "tabulate==0.9.0",
    "setuptools==80.9.0",
    "itsdangerous==2.2.0",
    "structlog==25.4.0",
    "httpx==0.28.1",
    "geoalchemy2==0.18.0",
    "boto3==1.38.27",
    "requests==2.32.5",
    "asyncpg==0.30.0",
    "greenlet==3.2.3",
    "simsimd==6.5.0",
    "psycopg2==2.9.10",
    "bcrypt==4.2.1",
    "click==8.1.8",
    "google-genai==1.68.0",
    "antimeridian==0.4.7",
    "beautifulsoup4>=4.14.3",
    "trafilatura>=2.0.0",
    "deepagents[quickjs]>=0.4.12",
    "model2vec>=0.8.2",
    "titiler-mosaic==0.25.0",
]

[dependency-groups]
dev = [
    "jupyterlab==4.4.5",
    "mypy==2.1.0",
    "types-PyYAML",
    "types-cachetools",
    "types-requests",
    "pre-commit==4.2.0",
    "ruff==0.12.4",
    "pytest==8.4.1",
    "matplotlib==3.10.3",
    "geopandas==1.0.1",
    "lancedb==0.24.1",
    "pytest-asyncio==1.1.0",
    "pytest-rerunfailures==15.0",
    "locust==2.32.5",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
sgrep = "src.agent.utils.sgrep:main"

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "integration: calls external LLM APIs; excluded from default CI run",
]

[tool.uv]
default-groups = ["dev"]
